--- a/demo/static/css/master.css
+++ b/demo/static/css/master.css
@@ -438,7 +438,7 @@ form {
     -moz-border-radius: 8px;
     -webkit-border-radius: 8px;
     border-radius: 8px;
-    width: 500px;
+    //width: 500px;
 
 }
 
