--- a/demo/templates/base.html
+++ b/demo/templates/base.html
@@ -11,14 +11,15 @@
     <meta name="keywords" content="education, eucleia, counselling, education, india, admission, colleges, institutes, courses, universities" />
     <meta name="author" content="Eucleia Consultancy LLP" />
 
-    <link rel="stylesheet" type="text/css" media="screen" href="{% static "css/master.css" %}" />
-    <link rel="stylesheet" type="text/css" media="screen" href="{% static "css/bootstrap.css" %}" />
-    <link rel="stylesheet" type="text/css" media="screen" href="{% static "css/flat-ui.css" %}" />
-    <link rel="stylesheet" type="text/css" media="screen" href="{% static "css/master.css" %}" />
+    <link rel="stylesheet" type="text/css" media="screen" href="{% static 'css/master.css' %}" />
+    <link rel="stylesheet" type="text/css" media="screen" href="{% static 'css/bootstrap.css' %}" />
+    <link rel="stylesheet" type="text/css" media="screen" href="{% static 'css/flat-ui.css' %}" />
+    <link rel="stylesheet" type="text/css" media="screen" href="{% static 'css/master.css' %}" />
+    <link rel="stylesheet" type="text/css" media="screen" href="{% static 'css/bootstrap-datepicker.min.css' %}" />
     <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script type="text/javascript" src="{% static "js/bootstrap.min.js" %}"></script>
+    <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
     <script type="text/javascript">
 		  /*<![CDATA[*/
 		  
@@ -158,18 +159,32 @@
       	</div><!-- /content-container-->
       	<div id="footer">{% trans 'All rights reserved by ' %} <a href="http://eucleiacorp.com">Eucleia Consultancy LLP</a></div>
     </div><!-- /container-->
-   	<script type="text/javascript" src="{% static "js/jquery-ui-1.10.0.custom.min.js" %}"></script>
-   	<script type="text/javascript" src="{% static "js/jquery.dropkick-1.0.0.js" %}"></script>
-   	<script type="text/javascript" src="{% static "js/custom_checkbox_and_radio.js" %}"></script>
-   	<script type="text/javascript" src="{% static "js/custom_radio.js" %}"></script>
-   	<script type="text/javascript" src="{% static "js/jquery.tagsinput.js" %}"></script>
-   	<script type="text/javascript" src="{% static "js/bootstrap-tooltip.js" %}"></script>
-   	<script type="text/javascript" src="{% static "js/jquery.placeholder.js" %}"></script>
-   	<script type="text/javascript" src="{% static "js/application.js" %}"></script>
-	<script type="text/javascript" src="{% static "js/jquery.blockUI.js" %}"></script>
-	<script type="text/javascript" src="{% static "js/jquery.tablednd.js" %}"></script>
-	<script type="text/javascript" src="{% static "js/jquery.printElement.js" %}"></script>
+   	<script type="text/javascript" src="{% static 'js/jquery-ui-1.10.0.custom.min.js' %}"></script>
+   	<script type="text/javascript" src="{% static 'js/jquery.dropkick-1.0.0.js' %}"></script>
+   	<script type="text/javascript" src="{% static 'js/custom_checkbox_and_radio.js' %}"></script>
+   	<script type="text/javascript" src="{% static 'js/custom_radio.js' %}"></script>
+   	<script type="text/javascript" src="{% static 'js/jquery.tagsinput.js' %}"></script>
+   	<script type="text/javascript" src="{% static 'js/bootstrap-tooltip.js' %}"></script>
+   	<script type="text/javascript" src="{% static 'js/jquery.placeholder.js' %}"></script>
+   	<script type="text/javascript" src="{% static 'js/application.js' %}"></script>
+	<script type="text/javascript" src="{% static 'js/jquery.blockUI.js' %}"></script>
+	<script type="text/javascript" src="{% static 'js/jquery.tablednd.js' %}"></script>
+	<script type="text/javascript" src="{% static 'js/jquery.printElement.js' %}"></script>
+	<script type="text/javascript" src="{% static 'js/bootstrap-datepicker.min.js' %}"></script>
+	
     <script src="http://vjs.zencdn.net/c/video.js"></script>
+    <script type="text/javascript">
+    $(function() {
+        $( ".birthdatepicker" ).datepicker({
+            dateFormat : 'mm/dd/yy',
+            changeMonth: true,
+            changeYear: true,
+            yearRange: '-100y:c+nn',
+            maxDate: '-1d'
+        });
+        $(".datepicker").datepicker();
+    });
+    </script>
     <!--[if lt IE 8]>
     	<script type="text/javascript" src="{% static "js/icon-font-ie7.js" %}"></script>
    		<script type="text/javascript" src="{% static "js/icon-font-ie7-24.js" %}"></script>
