Customised datepicker styles to resolve conflict with flat-ui

--- a/demo/templates/base.html
+++ b/demo/templates/base.html
@@ -176,7 +176,7 @@
     <script type="text/javascript">
     $(function() {
         $( ".birthdatepicker" ).datepicker({
-            dateFormat : 'mm/dd/yy',
+            dateFormat : 'dd/mm/yy',
             changeMonth: true,
             changeYear: true,
             yearRange: '-100y:c+nn',
