--- a/demo/templates/edu/index.html
+++ b/demo/templates/edu/index.html
@@ -139,7 +139,7 @@ function resetMessageSpan()
     <fieldset>
     	<legend>{% trans "Search and Apply" %}</legend>
     	{{ form.non_field_errors }}
-    	{{ form.as_p }}
+    	{{ form.as_ul }}
     </fieldset>
 	<div class="span3">
 	  <input type="submit" class="btn btn-block btn-success" value="{% trans "Search" %}"  id='searchbutton'>
