--- a/demo/templates/base.html
+++ b/demo/templates/base.html
@@ -1,5 +1,6 @@
 {% load i18n static %}
 {% load url from future %}
+{% load widget_tweaks %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
@@ -184,10 +185,15 @@
         });
         $(".datepicker").datepicker();
         $('.typeahead').typeahead({
+        	minLength: 3,
             source: function (query, process) {
                 return $.get("{% url 'edu_autocomplete_suggestion'%}", { query: query }, function (data) {
                     return process(JSON.parse(data));
                 });
+            },
+            sorter: function (items) {
+                items.unshift(this.query);
+                return items;
             }
         });
     });
