Changes to admin interface

--- a/demo/templates/admin/auth/user/change_password.html
+++ b/demo/templates/admin/auth/user/change_password.html
@@ -1,6 +1,4 @@
-
-{% extends "admin/base_site.html" %}
-1
+{% extends "admin/base.html" %}
 {% load i18n admin_static admin_modify %}
 {% load url from future %}
 {% load admin_urls %}
@@ -51,10 +49,8 @@
 
 </fieldset>
 
-
 <div class="span3">
 <input type="submit" value="{% trans 'Change password' %}" class="btn btn-danger" />
-
 </div>
 
 <script type="text/javascript">document.getElementById("id_password1").focus();</script>
